<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Run it!</string>
    <string name="title_activity_workout_list">My workouts</string>
    <string name="title_activity_workout_data">Workout details</string>
    <string name="title_activity_create_workout">Run it!</string>
    <string name="title_audio_coach">Audio coach</string>
    <!--<string name="title_accessories">Accessories</string>-->
    <string name="title_activity_health_device">Health device</string>
    <string name="title_activity_main"></string>

    <string name="menu_audio_coach">audio coach</string>
    <!--<string name="menu_accessories">accessories</string>-->
    <string name="content_create_workout">CreateWorkoutActivity</string>
     
    <string name="hintTxtItem">Select/create your route </string>
     
    <string name="lblBtnAdd">Add Route</string>
    <string name="lblBtnRemove">Remove Route</string>

    <string name="lblBtnOn">On</string>
    <string name="lblBtnOff">Off</string>


    <string-array name="routes"></string-array>

    <string name="title_activity_workout_list_route">WorkoutListRoute</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_registration">App Registration</string>
    <string name="data_ind">Data Indicator</string>
    <string name="channel_connection">Channel Connection</string>
    <string name="channel_connection_desc">(some devices automatically initiate connection)</string>
    <string name="connect">Connect</string>
    <string name="connected">CONNECTED</string>
    <string name="connection_state">Connection State</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="empty"> </string>
    <string name="none">None...</string>
    <string name="read_data">Reading data...</string>
    <string name="read_data_done">Done with reading data...</string>
    <string name="register">Register</string>
    <string name="select_device">Select a device</string>
    <string name="status_create_channel">Create channel status: %d</string>
    <string name="status_destroy_channel">Destroy channel status: %d</string>
    <string name="status_msg">Status Message</string>
    <string name="status_reg">App registration status: %d</string>
    <string name="status_unreg">App unregistration status: %d</string>
    <string name="unregister">Unregister</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="ok" >Ok</string>
    <string name="bluetooth_health_profile_not_available">Bluetooth health profile is not available</string>

</resources>


