<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CreateWorkoutActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:text="Health accessories"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_registration"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center" >
        <Button android:id="@+id/button_register_app"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="130dp"
            android:background="@drawable/buttonstyle"
            android:text="register" />
        <Button android:id="@+id/button_unregister_app"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="130dp"
            android:background="@drawable/buttonstyle"
            android:text="unregister" />
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_connection"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_connection_desc"
        android:textSize="14sp" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center" >
        <Button android:id="@+id/button_connect_channel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="130dp"
            android:background="@drawable/buttonstyle"
            android:text="connect" />
        <Button android:id="@+id/button_disconnect_channel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="130dp"
            android:background="@drawable/buttonstyle"
            android:text="disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_state"
            android:textSize="20sp" />
        <Space android:layout_width="10dp"
            android:layout_height="0px" />
        <TextView android:id="@+id/connect_ind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(connect indicator)"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_ind"
            android:textSize="20sp"/>
        <Space android:layout_width="10dp"
            android:layout_height="0px" />
        <ImageView android:id="@+id/data_ind"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/led_indicator" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/status_msg"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView android:id="@+id/status_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="18sp"
        android:layout_margin="10dp"/>
</LinearLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
