<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateWorkoutActivity"
    tools:showIn="@layout/activity_create_workout">

     <EditText
            android:layout_height="wrap_content"
            android:layout_width="290dp"
            android:id="@+id/txtItem"
            android:inputType="text"
            android:layout_marginTop="100dp"
            android:hint="@string/hintTxtItem"
            android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"
            android:textColor="#000000"
            android:background="@drawable/linearlayoutbg"
            android:layout_marginLeft="20dp"
            android:textSize="25dp"/>

       <Spinner
            android:layout_height="wrap_content"
            android:layout_width="280dp"
            android:layout_below="@id/txtItem"
            android:id="@+id/spinner"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            style="@style/mySpinnerItemStyle"/>
     
        <Button
            android:background="@drawable/buttonstyle"
            android:layout_height="wrap_content"
            android:layout_width="130dp"
            android:id="@+id/btnAdd"
            android:text="@string/lblBtnAdd"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="100dp"/>

        <Button
            android:background="@drawable/buttonstyle"
            android:layout_height="wrap_content"
            android:layout_width="130dp"
            android:id="@+id/btnRemove"
            android:text="@string/lblBtnRemove"
            android:layout_toRightOf="@id/btnAdd"
            android:layout_marginLeft="18dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"/>
     
        />

        <Button
            android:background="@drawable/buttonstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/buttonOK" />

</RelativeLayout>
